# kirei-manga

./: .dockerignore  .gitignore  .impeccable.md  CHANGELOG.md  Dockerfile.landing  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
apps/desktop/: electron-builder.json  esbuild.config.mjs  jest.config.cjs  package.json  tsconfig.build.json  tsconfig.json
apps/desktop/resources/: README.md
apps/desktop/resources/licenses/: NOTICE.md  OpenCV-LICENSE-TODO.txt  libjpeg-turbo-LICENSE-TODO.txt  libpng-LICENSE-TODO.txt  zlib-LICENSE-TODO.txt
apps/desktop/resources/tesseract/: README.md
apps/desktop/scripts/: check-tesseract-binding.mjs
apps/desktop/src/: main.ts
apps/desktop/src/main/: backend-port.ts  cleanup-utils.ts  index.ts  logger.ts  preload.ts  store.ts  updater.ts  window.ts
apps/desktop/src/modules/: app.module.ts
apps/landing/: .gitignore  astro.config.mjs  package.json
apps/landing/scripts/: generate-og.mjs
apps/landing/src/components/: BaseHead.astro  Cta.astro  Features.astro  Footer.astro  Gallery.astro  Hero.astro  Navbar.astro  Roadmap.astro  Suite.astro
apps/landing/src/layouts/: BaseLayout.astro
apps/landing/src/lib/: changelog.ts  i18n.ts  site.ts
apps/landing/src/pages/: changelog.astro  download.astro  index.astro
apps/landing/src/styles/: global.css
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  main.tsx  router.tsx  vite-env.d.ts
apps/web/src/hooks/: useAppVersion.ts  useAppearance.ts  useChapterBookmarks.ts  useChapterPages.ts  useChapterStates.ts  useDownloadChapter.ts  useFollow.ts  useImagePreload.ts  useLocalImport.ts  useLocalReaderProgress.ts  useMangaDexChapters.ts  useMangaDexFeed.ts  useMangaDexSearch.ts  useMangaDexSeries.ts  useReaderKeyboard.ts  useReaderPrefs.ts  useReaderProgress.ts  useSeriesBookmarks.ts  useSocketQuery.ts  useT.test.tsx  useT.ts  useToast.ts  useTranslationForPage.test.tsx  useTranslationForPage.ts
apps/web/src/i18n/: en.ts  index.ts  mangadexTags.ts  pl.ts
apps/web/src/lib/: fuzzyMatch.test.ts  fuzzyMatch.ts  relativeTime.test.ts  relativeTime.ts  resolve-translation-settings.test.ts  resolve-translation-settings.ts  socket.ts  socketHelpers.ts
apps/web/src/pages/: Browse.tsx  Library.tsx  LibraryImport.tsx  LocalSeriesDetail.tsx  Reader.tsx  SeriesDetail.tsx  Settings.tsx
apps/web/src/stores/: browse-store.ts  downloads-store.ts  library-store.ts  (+11 more)
docs/: kireimanga-prd.md  mascot-prompts.md  v0.1-roadmap.md  v0.2-roadmap.md  v0.3-roadmap.md  v0.4-roadmap.md
native/bubble-detector/: .gitignore  README.md  binding.gyp  index.js  package.json
native/bubble-detector/scripts/: build-opencv.ps1  build-opencv.sh  rename-prebuild.mjs
native/bubble-detector/src/: detector.cpp  detector_core.cpp  detector_core.h
native/bubble-detector/test/: CMakeLists.txt  detector_test.cpp
native/bubble-detector/test/fixtures/pages/: README.md
scripts/: bench-bubble-detector.mjs  build-sidecar.mjs  bump-version.mjs  fetch-prebuilds.mjs  fetch-tesseract-traineddata.mjs  native-build.mjs  preview-mascot.mjs  set-version-ci.sh
sidecar/: .gitignore
sidecar/manga-ocr/: README.md  build.py  main.py  requirements-build.txt  requirements.txt
(+173 files in other folders)
